Repaired some more bugs causing an inconsistent definitions pane state (where the display gets out of sync with the state of the document).  Repaired the synchronization in PopupConsole and InteractionsPaneTest.  Eliminated deprecated initialization call for the winlaf style.
git-svn-id: file:///tmp/test-svn/trunk@3500 fe72c1cf-3628-48e9-8b72-1c46755d3cff